Various encoder implementation + interface refactoring